# monkey-tools

./: LICENSE  README.md
.claude-plugin/: marketplace.json
plugins/transcription/: .mcp.json  README.md  pyproject.toml  run.sh  server.py  transcribe_cli.py  transcription.py
plugins/transcription/.claude-plugin/: plugin.json
plugins/transcription/LICENSES/: pyannote-MIT.txt
plugins/transcription/models/models--pyannote--segmentation-3.0/refs/: main
plugins/transcription/models/models--pyannote--wespeaker-voxceleb-resnet34-LM/refs/: main
plugins/transcription/skills/transcribe/: SKILL.md
