[project]
name = "transcription-mcp"
version = "0.1.0"
description = "Local-first audio transcription MCP server with speaker diarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "python-dotenv>=1.2.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "whisperx>=3.8.2",
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
transcription-mcp = "server:main"
