[project]
name = "transcription-mcp"
version = "0.1.3"
description = "Local-first audio transcription MCP server with speaker diarization"
readme = "README.md"
requires-python = ">=3.11"
# Only MCP framework for instant startup. Heavy ML deps installed on first transcription.
dependencies = [
    "mcp>=1.26.0",
]
